--- a/CSS/index.css
+++ b/CSS/index.css
@@ -23,16 +23,16 @@
 header{
     width: 100%;
     height: 60px;
-    background-color: green;
+    background-color: rgb(151,52,68);
 }
 .content{
     width: 90%;
     height: 600px;
-    background-color: red;
+    background-color: rgb(151,52,68);
     margin: 0 auto;
 }
 footer{
     width: 100%;
     height: 200px;
-    background-color: black;
+    background-color: rgb(151,52,68);
 }
