--- a/CSS/index.css
+++ b/CSS/index.css
@@ -22,9 +22,51 @@
   */
 header{
     width: 100%;
-    height: 60px;
-    background-color: rgb(151,52,68);
+    height: 65px;
+    background-color: #3e3c3d;
 }
+header p{
+    max-width: 100px;
+    height: 65px;
+    display: inline-block;
+    line-height: 65px;
+    text-align: center;
+    background-color: red;
+    margin-left: 30px;
+    color: #e9db39;
+    font-size: 30px;
+    transition: all .8s ease-out;
+}
+header p:hover{
+    transform: rotate(360deg);
+}
+header p span{
+    height: 65px;
+    /*background-color: blue;*/
+    font-size: 45px;
+    transition: all .8s ease-out;
+}
+
+header p:hover span{
+    font-size: 30px;
+}
+header ul{
+    display: inline-block;
+    min-width: 500px;
+    height: 50px;
+    background-color: red;
+    float: right;
+    margin-right: 100px;
+}
+header ul li{
+    display: inline-block;
+    width: 95px;
+    height: 50px;
+    background-color: blue;
+}
+
+
+
 .content{
     width: 90%;
     height: 600px;
@@ -34,5 +76,5 @@ header{
 footer{
     width: 100%;
     height: 200px;
-    background-color: rgb(151,52,68);
+    background-color: #3e3c3d;
 }
