--- a/CSS/index.css
+++ b/CSS/index.css
@@ -31,7 +31,7 @@ header p{
     display: inline-block;
     line-height: 65px;
     text-align: center;
-    background-color: red;
+    /*background-color: red;*/
     margin-left: 30px;
     color: #e9db39;
     font-size: 30px;
@@ -50,23 +50,42 @@ header p span{
 header p:hover span{
     font-size: 30px;
 }
+
+
 header ul{
-    display: inline-block;
-    min-width: 500px;
-    height: 50px;
-    background-color: red;
+    width: 550px;
+    height: 45px;
+    /*background-color: red;*/
     float: right;
-    margin-right: 100px;
+    margin-top: 10px;
+    margin-right: 50px;
 }
 header ul li{
     display: inline-block;
-    width: 95px;
-    height: 50px;
-    background-color: blue;
+    width: 100px;
+    height: 45px;
+    /*background-color: blue;*/
+    line-height: 45px;
+    text-align: center;
+    margin-left: 30px;
+    border-top: 2px solid rgba(233,219,57,1);
+    border-bottom: 2px solid rgba(233,219,57,1);
+    box-sizing: border-box;
+    transition: all .5s;
 }
+header ul li a{
+    color: #e9db39;
+}
+header ul li:hover{
+    transform: scale(1.3);
+    background-color: rgba(0,0,0,0.1);
+    border-top: 2px solid  #008e59;
+    border-bottom: 2px solid  #008e59;
 
-
-
+}
+header ul li:hover a{
+    color: #008e59;
+}
 .content{
     width: 90%;
     height: 600px;
