--- a/CSS/index.css
+++ b/CSS/index.css
@@ -24,6 +24,7 @@ header{
     width: 100%;
     height: 65px;
     background-color: #3e3c3d;
+    font-family: "Microsoft YaHei", "Segoe UI", "Lucida Grande", Helvetica, Arial, sans-se;
 }
 header p{
     max-width: 100px;
@@ -65,6 +66,7 @@ header ul li{
     width: 100px;
     height: 45px;
     /*background-color: blue;*/
+    font-size: 18px;
     line-height: 45px;
     text-align: center;
     margin-left: 30px;
