--- a/CSS/index.css
+++ b/CSS/index.css
@@ -101,19 +101,24 @@ header ul li:hover a{
 
 
 
-
+@keyframes fz {
+    from{
+        transform: rotateY(180deg) rotateX(0deg);
+    }
+    to{
+        transform: rotateY(360deg) rotateX(180deg);
+    }
+}
 .content{
     width: 98%;
-    height: 1600px;
+    height: 600px;
     /*background-image: url(../images/bg1.jpg);*/
-    background-color: rgba(151,52,68,.8);
+    background-color: rgba(204,53,54,.8);
     margin: 18px auto;
     border: 4px solid #111;
     box-sizing: border-box;
+    animation: fz 2s linear infinite;
 }
-
-
-
 
 footer{
     width: 100%;
@@ -121,4 +126,90 @@ footer{
     background-color: rgba(63,63,60,0.8);
     border: 4px solid #111;
     box-sizing: border-box;
+}
+footer .footer{
+    width: 800px;
+    height: 192px;
+    margin: 0 auto;
+    /*background-color: red;*/
+    border: 1px solid rgba(0,0,0,0);
+    box-sizing: border-box;
+}
+footer .footer .search{
+    width: 510px;
+    height: 40px;
+    /*background-color: blue;*/
+    margin: 15px auto;
+}
+footer .footer input{
+    display: inline-block;
+    width: 400px;
+    height: 42px;
+    background-color: rgba(63,63,60,0);
+    margin: 0 auto;
+    float: left;
+    border: 2px solid rgba(233,219,57,1);
+    box-sizing: border-box;
+    border-radius: 20px;
+    outline: none;
+    padding-left: 20px;
+    font-size: 20px;
+    color: rgb(233,219,57);
+}
+footer .footer button{
+    width: 90px;
+    height: 42px;
+    background-color: rgba(63,63,60,0.9);
+    float: right;
+    border: 2px solid rgb(233,219,57);
+    border-radius: 20px;
+    color: rgb(233,219,57);
+    font-size: 18px;
+    outline: none;
+}
+footer .footer button:active{
+    border: 2px solid #008e59;
+    color: #008e59;
+}
+footer .footer input:focus{
+    border: 2px solid #008e59;
+    color: #008e59;
+}
+footer .footer .link{
+    width: 510px;
+    height: 40px;
+    /*background-color: blue;*/
+    margin: 20px auto;
+    position: relative;
+}
+footer .footer .link a{
+    position: absolute;
+}
+footer .footer .link a:nth-child(1){
+    left: 110px;
+}
+footer .footer .link a:nth-child(2){
+    left: 160px;
+}
+footer .footer .link a:nth-child(3){
+    left: 210px;
+}
+footer .footer .link a:nth-child(4){
+    left: 260px;
+}
+footer .footer .bq{
+    width: 510px;
+    height: 40px;
+    /*background-color: blue;*/
+    margin: 0 auto;
+    position: relative;
+    top: -10px;
+}
+footer .footer .bq p{
+    width: 300px;
+    height: 40px;
+    /*background-color: red;*/
+    margin-left: 60px;
+    font-size: 20px;
+    color: rgb(233,219,57);
 }
