--- a/CSS/index.css
+++ b/CSS/index.css
@@ -111,12 +111,11 @@ header ul li:hover a{
 }
 .content{
     width: 98%;
-    height: 600px;
     /*background-image: url(../images/bg1.jpg);*/
     margin: 18px auto;
-    border: 4px solid #111;
+    /*border: 4px solid #111;*/
     box-sizing: border-box;
-    background-color: rgba(63,63,60,0.6);
+    /*background-color: rgba(63,63,60,0.6);*/
     /*animation: fz 2s linear infinite;*/
 }
 
